# Rustify

./: +  .gitignore  .spotify_token_cache.json  Cargo.toml  LICENSE  README.md
src/: app.rs  auth.rs  lib.rs  main.rs  tui.rs
src/tui/playlist/: mod.rs
